# epubviewer

./: .gitignore  BUGS.txt  README.md  Reading Styles.txt  TODO.md  pyproject.toml  requirements.txt
data/shortcut/: io.github.fastrizwaan.epubviewer.desktop
flatpak/: build.sh  epubviewer.py  io.github.fastrizwaan.epubviewer.desktop  io.github.fastrizwaan.epubviewer.yaml  run_epubviewer.sh
src/: epubviewer.py
