[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epubviewer"
version = "1.0.0"
description = "A modern GTK4 EPUB reader with multi-column support and TTS capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0+"}
authors = [
    {name = "fastrizwaan", email = "fastrizwaan@github.com"}
]
keywords = ["epub", "reader", "gtk", "adwaita", "ebook", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Text Editors",
]

dependencies = [
    "PyGObject>=3.42.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.8.0",
    "kokoro-onnx>=0.3.0",
    "soundfile>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/fastrizwaan/epubviewer"
Repository = "https://github.com/fastrizwaan/epubviewer.git"
Issues = "https://github.com/fastrizwaan/epubviewer/issues"

[project.scripts]
epubviewer = "epubviewer:main"

## for multiple sources 
##[tool.setuptools]
##packages = ["src"]

# for single file
[tool.setuptools]
py-modules = ["epubviewer"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
